objects/smagicinteract__Converse_App_Action__c.object
<CustomObject>
    <description>As Converse App is container of SMS activities like Bulk SMS, Automated SMS, We need a sub object which will be used to store the Activity instruction level details. E.g. Bulk for sub purpose A, B,C or An automation configurations for  each of workflow rule.</description>
    <fields>
        <fullName>smagicinteract__Automation_Key__c</fullName>
        <displayFormat>PA-{000000}</displayFormat>
        <label>Automation Key</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Converse_App__c</fullName>
        <description>Lookup to Converse App object.</description>
        <label>Converse App</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 OR 2 OR 3)</booleanFilter>
            <filterItems>
                <field>smagicinteract__Converse_App__c.smagicinteract__Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>smagicinteract__Converse_App__c.smagicinteract__Status__c</field>
                <operation>equals</operation>
                <value>Draft</value>
            </filterItems>
            <filterItems>
                <field>smagicinteract__Converse_App__c.smagicinteract__Status__c</field>
                <operation>equals</operation>
                <value>Paused</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>smagicinteract__Converse_App__c</referenceTo>
        <relationshipLabel>Converse App Action</relationshipLabel>
        <relationshipName>Converse_App_Action</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>smagicinteract__End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Fallback_SenderId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Fallback sender id would be used if a sender id corresponding to criteria can&apos;t be found. Not specifying this field would fail messages for records where sender selection criteria didn&apos;t return a valid sender id</description>
        <label>Fallback SenderId</label>
        <referenceTo>smagicinteract__SMS_SenderId__c</referenceTo>
        <relationshipLabel>Converse App Action</relationshipLabel>
        <relationshipName>Converse_App_Action</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__List_View_ID__c</fullName>
        <label>List View ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Message_App_Trigger_Name__c</fullName>
        <label>Message App Trigger Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Message_App_Trigger__c</fullName>
        <label>Message App Trigger</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Process Builder</fullName>
                </value>
                <value>
                    <fullName>Workflow</fullName>
                </value>
                <value>
                    <fullName>Marketo</fullName>
                </value>
                <value>
                    <fullName>Pardot</fullName>
                </value>
                <value>
                    <fullName>Detail</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Manual-Scheduled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smagicinteract__Message_Sequence__c</fullName>
        <label>Message Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Message_Text__c</fullName>
        <label>Message Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Mobile_Phone_Field__c</fullName>
        <label>Mobile Phone Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Purpose__c</fullName>
        <label>Purpose</label>
        <length>1028</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Respect_Subscription_Setting__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If selected, people who have opted out won&apos;t get messages and people who&apos;ve opted in would get messages.</description>
        <label>Respect Subscription Setting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smagicinteract__SMS_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SMS Schedule</label>
        <referenceTo>smagicinteract__SMS_Schedule__c</referenceTo>
        <relationshipLabel>Converse App Actions</relationshipLabel>
        <relationshipName>Converse_App_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__SMS_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SMS Template</label>
        <referenceTo>smagicinteract__SMS_Template__c</referenceTo>
        <relationshipLabel>Converse_App_Action</relationshipLabel>
        <relationshipName>Converse_App_Action</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__SenderIDSelectionCriteria__c</fullName>
        <label>SenderID Selection Criteria</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Current User&apos;s SenderID</fullName>
                </value>
                <value>
                    <fullName>Record Owner&apos;s SenderID</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smagicinteract__SenderIDSelectionType__c</fullName>
        <label>SenderID Selection Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smagicinteract__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Paused</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Running</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                    <isActive>false</isActive>
                    <label>Closed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smagicinteract__Task_Owner_Criteria__c</fullName>
        <label>Task Owner Criteria</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current User</fullName>
                </value>
                <value>
                    <fullName>Record Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smagicinteract__Template_Selection_Criteria__c</fullName>
        <label>Template Selection Criteria</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smagicinteract__Template_Selection_Type__c</fullName>
        <label>Template Selection Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                    <default>true</default>
                    <label>Fixed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smagicinteract__Trigger_URL__c</fullName>
        <label>Trigger URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Automation</fullName>
                    <default>true</default>
                    <label>Automation</label>
                </value>
                <value>
                    <fullName>Auto Reply</fullName>
                </value>
                <value>
                    <fullName>Bulk</fullName>
                </value>
                <value>
                    <fullName>Notification to User</fullName>
                </value>
                <value>
                    <fullName>ResponseAutomation</fullName>
                    <label>ResponseAutomation(Donot use)</label>
                </value>
                <value>
                    <fullName>Schedule</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Converse App Action</label>
    <listViews>
        <fullName>smagicinteract__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Converse App Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>